--- a/config/config.yaml
+++ b/config/config.yaml
@@ -46,3 +46,11 @@ telemetry:
   # otel_agent_addr is the addr of OpenTelemetry Collector/Agent. This is where the
   # opene-telemetry exporter will publish the collected traces/views to.
   otel_agent_addr: "localhost:8088"
+
+# [Shield](https://github.com/odpf/shield) client related configurations
+shield:
+  addr: localhost:8080
+
+# [Entropy](https://github.com/odpf/entropy) client related configurations
+entropy:
+  addr: localhost:8090
