--- a/config/config.yaml
+++ b/config/config.yaml
@@ -54,3 +54,4 @@ shield:
 # [Entropy](https://github.com/odpf/entropy) client related configurations
 entropy:
   addr: localhost:8090
+  firehose_version: v0.5.0
