--- a/config/config.yaml
+++ b/config/config.yaml
@@ -49,9 +49,13 @@ telemetry:
 
 # [Shield](https://github.com/odpf/shield) client related configurations
 shield:
-  addr: localhost:8080
+  addr: localhost:8000
 
 # [Entropy](https://github.com/odpf/entropy) client related configurations
 entropy:
-  addr: localhost:8090
+  addr: localhost:8010
   firehose_version: v0.5.0
+
+# [Siren](https://github.com/odpf/siren) client related configurations
+siren:
+  addr: localhost:8020
